access to varnish trough docker socket

--- a/collectors/python.d.plugin/varnish/varnish.conf
+++ b/collectors/python.d.plugin/varnish/varnish.conf
@@ -61,6 +61,7 @@
 #
 # Additionally to the above, varnish also supports the following:
 #
-#     instance_name: 'name'       # the name of the varnishd instance to get logs from. If not specified, the host name is used.
-#
+#     instance_name: 'name'                           # the name of the varnishd instance to get logs from. If not specified, the host name is used.
+#     image_name: 'name'                              # the name of the docker image spawning containers with varnishd instances ont run varnishstats. 
+#     socket: '/var/run/docker.sock'                  # the unix socket where docker is listening (must be linked in a volume if running netdata from a container) 
 # ----------------------------------------------------------------------
