Add rest of syslog config options and TCP / UDP support

--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -62,6 +62,7 @@
 	
 	# Auto-detect web log format, otherwise it can be set manually, e.g.:
 	# log format = %h %l %u %t "%r" %>s %b "%{Referer}i" "%{User-agent}i"
+	# see https://httpd.apache.org/docs/2.4/logs.html#accesslog
 	log format = auto
 
 	verify parsed logs = yes
@@ -97,6 +98,7 @@
 	# log path = /var/log/nginx/access.log
 	log path = auto
 
+	# see https://docs.nginx.com/nginx/admin-guide/monitoring/logging/#setting-up-the-access-log
 	log format = $remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent $request_length $request_time "$http_referer" "$http_user_agent"
 	verify parsed logs = yes
 
@@ -194,14 +196,21 @@
 	buffer flush to DB = 6 # in sec, default 6 min 4
 	disk space limit = 500 # in MiB, default 500MiB
 
-	# Need to set the path to the 
+	# Netdata will create this socket, please ensure the right permissions exist for this path
 	log path = /tmp/netdata-syslog.sock
 
+	# Ruby Regular Expression to define expected syslog format
+	# Please make sure <PRIVAL>, <SYSLOG_TIMESTAMP>, <HOSTNAME>, <SYSLOG_IDENTIFIER>, <PID> and <MESSAGE> are defined
+	# see also https://docs.fluentbit.io/manual/pipeline/parsers/regular-expression
+	log format = /^\\<(?<PRIVAL>[0-9]+)\\>(?<SYSLOG_TIMESTAMP>[^ ]* {1,2}[^ ]* [^ ]* )(?<HOSTNAME>[^ ]*) (?<SYSLOG_IDENTIFIER>[a-zA-Z0-9_\\/\\.\\-]*)(?:\\[(?<PID>[0-9]+)\\])?(?:[^\\:]*\\:)? *(?<MESSAGE>.*)$/
+
 	# Set up configuration specific to flb_syslog
-	# mode = unix_udp
-	# listen = 
-	# port =
-	# unix_perm =
+	# see also https://docs.fluentbit.io/manual/pipeline/inputs/syslog#configuration-parameters
+	# Modes supported are: unix_tcp, unix_udp, tcp, udp
+	mode = unix_udp
+	listen = 0.0.0.0
+	port = 5140
+	unix_perm = 0666
 	
 	# Charts to enable
 	priority value chart = yes
