Fix failing build and wrong syslog format

--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -202,7 +202,7 @@
 	# Ruby Regular Expression to define expected syslog format
 	# Please make sure <PRIVAL>, <SYSLOG_TIMESTAMP>, <HOSTNAME>, <SYSLOG_IDENTIFIER>, <PID> and <MESSAGE> are defined
 	# see also https://docs.fluentbit.io/manual/pipeline/parsers/regular-expression
-	log format = /^\\<(?<PRIVAL>[0-9]+)\\>(?<SYSLOG_TIMESTAMP>[^ ]* {1,2}[^ ]* [^ ]* )(?<HOSTNAME>[^ ]*) (?<SYSLOG_IDENTIFIER>[a-zA-Z0-9_\\/\\.\\-]*)(?:\\[(?<PID>[0-9]+)\\])?(?:[^\\:]*\\:)? *(?<MESSAGE>.*)$/
+	log format = /^\<(?<PRIVAL>[0-9]+)\>(?<SYSLOG_TIMESTAMP>[^ ]* {1,2}[^ ]* [^ ]* )(?<HOSTNAME>[^ ]*) (?<SYSLOG_IDENTIFIER>[a-zA-Z0-9_\/\.\-]*)(?:\[(?<PID>[0-9]+)\])?(?:[^\:]*\:)? *(?<MESSAGE>.*)$/
 
 	# Set up configuration specific to flb_syslog
 	# see also https://docs.fluentbit.io/manual/pipeline/inputs/syslog#configuration-parameters
