--- a/daemon/anonymous-statistics.sh.in
+++ b/daemon/anonymous-statistics.sh.in
@@ -70,6 +70,7 @@ NETDATA_CONFIG_OOM_SCORE="${41}"
 NETDATA_PREBUILT_DISTRO="${42}"
 NETDATA_HEALTH_ENABLED="${43}"
 NETDATA_HEALTH_CONF_ALARMS_DISABLED="${44}"
+NETDATA_HEALTH_ALARMS_SILENCED="${45}"
 
 
 # define body of request to be sent
@@ -161,7 +162,8 @@ REQ_BODY="$(cat << EOF
         "mirrored_hosts_unreachable": ${NETDATA_MIRRORED_HOSTS_UNREACHABLE},
         "exporting_connectors": ${NETDATA_EXPORTING_CONNECTORS},
         "health_enabled": ${NETDATA_HEALTH_ENABLED},
-        "health_conf_alarms_disabled": ${NETDATA_HEALTH_CONF_ALARMS_DISABLED}
+        "health_conf_alarms_disabled": ${NETDATA_HEALTH_CONF_ALARMS_DISABLED},
+        "health_alarms_silenced": ${NETDATA_HEALTH_ALARMS_SILENCED}
   }
 }
 EOF
