--- a/daemon/anonymous-statistics.sh.in
+++ b/daemon/anonymous-statistics.sh.in
@@ -68,9 +68,6 @@ NETDATA_IS_PRIVATE_REGISTRY="${39}"
 NETDATA_USE_PRIVATE_REGISTRY="${40}"
 NETDATA_CONFIG_OOM_SCORE="${41}"
 NETDATA_PREBUILT_DISTRO="${42}"
-NETDATA_HEALTH_ENABLED="${43}"
-NETDATA_HEALTH_CONF_ALARMS_DISABLED="${44}"
-NETDATA_HEALTH_ALARMS_SILENCED="${45}"
 
 
 # define body of request to be sent
@@ -160,10 +157,7 @@ REQ_BODY="$(cat << EOF
         "mirrored_host_count": ${NETDATA_MIRRORED_HOST_COUNT},
         "mirrored_hosts_reachable": ${NETDATA_MIRRORED_HOSTS_REACHABLE},
         "mirrored_hosts_unreachable": ${NETDATA_MIRRORED_HOSTS_UNREACHABLE},
-        "exporting_connectors": ${NETDATA_EXPORTING_CONNECTORS},
-        "health_enabled": ${NETDATA_HEALTH_ENABLED},
-        "health_conf_alarms_disabled": ${NETDATA_HEALTH_CONF_ALARMS_DISABLED},
-        "health_alarms_silenced": ${NETDATA_HEALTH_ALARMS_SILENCED}
+        "exporting_connectors": ${NETDATA_EXPORTING_CONNECTORS}
   }
 }
 EOF
