Try to exclude ./fluent-bit/* from spellcheck again

--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -152,7 +152,9 @@ jobs:
           reporter: github-pr-check
           path: "."
           pattern: "*.sh*"
-          exclude: "./.git/* ./fluent-bit/*"
+          exclude: |
+            ./.git/*
+            ./fluent-bit/*
 
   yamllint:
     name: yamllint
