add consul_gc_pause_time alarm

--- a/health/health.d/consul.conf
+++ b/health/health.d/consul.conf
@@ -117,3 +117,17 @@ component: Consul
     delay: down 5m multiplier 1.5 max 1h
      info: service health check $label:check_name for service $label:service_name has failed on datacenter $label:datacenter node $label:node_name
        to: sysadmin
+
+ template: consul_gc_pause_time
+       on: consul.gc_pause_time
+    class: Errors
+     type: ServiceMesh
+component: Consul
+   lookup: sum -1m unaligned
+    every: 10s
+    units: seconds
+     warn: $this > (($status >= $WARNING)  ? (1) : (2))
+     crit: $this > (($status >= $WARNING)  ? (2) : (5))
+    delay: down 5m multiplier 1.5 max 1h
+     info: time server $label:node_name datacenter $label:datacenter spent in stop-the-world garbage collection pauses.
+       to: sysadmin
