--- a/health/health.d/consul.conf
+++ b/health/health.d/consul.conf
@@ -10,7 +10,7 @@ component: Consul
     units: status
      warn: $this == 1
     delay: down 5m multiplier 1.5 max 1h
-     info: server $label:node_name reports that datacenter $label:datacenter cluster is unhealthy
+     info: datacenter $label:datacenter cluster is unhealthy as reported by server $label:node_name
        to: sysadmin
 
  template: consul_raft_leader_last_contact_time
@@ -24,7 +24,7 @@ component: Consul
      warn: $this > (($status >= $WARNING)  ? (150) : (200))
      crit: $this > (($status == $CRITICAL) ? (200) : (500))
     delay: down 5m multiplier 1.5 max 1h
-     info: median time elapsed since datacenter $label:datacenter leader server $label:node_name was last able to contact the follower nodes
+     info: median time elapsed since leader server $label:node_name datacenter $label:datacenter was last able to contact the follower nodes
        to: sysadmin
 
  template: consul_raft_leadership_transitions
@@ -37,7 +37,7 @@ component: Consul
     units: percentage
      warn: $this > 0
     delay: down 5m multiplier 1.5 max 1h
-     info: there has been a leadership change and datacenter $label:datacenter server $label:node_name has become the leader
+     info: there has been a leadership change and server $label:node_name datacenter $label:datacenter has become the leader
        to: sysadmin
 
  template: consul_raft_thread_main_saturation
@@ -50,7 +50,7 @@ component: Consul
     units: percentage
      warn: $this > (($status >= $WARNING)  ? (40) : (50))
     delay: down 5m multiplier 1.5 max 1h
-     info: datacenter $label:datacenter server $label:node_name main Raft goroutine saturation
+     info: average saturation of the main Raft goroutine on server $label:node_name datacenter $label:datacenter
        to: sysadmin
 
  template: consul_raft_thread_fsm_saturation
@@ -63,7 +63,7 @@ component: Consul
     units: milliseconds
      warn: $this > (($status >= $WARNING)  ? (40) : (50))
     delay: down 5m multiplier 1.5 max 1h
-     info: datacenter $label:datacenter server $label:node_name FSM Raft goroutine saturation
+     info: average saturation of the FSM Raft goroutine on server $label:node_name datacenter $label:datacenter
        to: sysadmin
 
  template: consul_client_rpc_requests_exceeded
@@ -102,7 +102,7 @@ component: Consul
     units: status
      warn: $this != nan AND $this != 0
     delay: down 5m multiplier 1.5 max 1h
-     info: node health check $label:check_name has failed on datacenter $label:datacenter node $label:node_name
+     info: node health check $label:check_name has failed on server $label:node_name datacenter $label:datacenter
        to: sysadmin
 
  template: consul_service_health_check_status
@@ -115,7 +115,7 @@ component: Consul
     units: status
      warn: $this == 1
     delay: down 5m multiplier 1.5 max 1h
-     info: service health check $label:check_name for service $label:service_name has failed on datacenter $label:datacenter node $label:node_name
+     info: service health check $label:check_name for service $label:service_name has failed on server $label:node_name datacenter $label:datacenter
        to: sysadmin
 
  template: consul_gc_pause_time
@@ -129,5 +129,5 @@ component: Consul
      warn: $this > (($status >= $WARNING)  ? (1) : (2))
      crit: $this > (($status >= $WARNING)  ? (2) : (5))
     delay: down 5m multiplier 1.5 max 1h
-     info: time server $label:node_name datacenter $label:datacenter spent in stop-the-world garbage collection pauses.
+     info: time spent in stop-the-world garbage collection pauses on server $label:node_name datacenter $label:datacenter
        to: sysadmin
