--- a/health/health.d/consul.conf
+++ b/health/health.d/consul.conf
@@ -13,6 +13,19 @@ component: Consul
      info: datacenter $label:datacenter cluster is unhealthy as reported by server $label:node_name
        to: sysadmin
 
+ template: consul_autopilot_server_health_status
+       on: consul.autopilot_server_health_status
+    class: Errors
+     type: ServiceMesh
+component: Consul
+     calc: $unhealthy
+    every: 10s
+    units: status
+     warn: $this == 1
+    delay: down 5m multiplier 1.5 max 1h
+     info: server $label:node_name from datacenter $label:datacenter is unhealthy
+       to: sysadmin
+
  template: consul_raft_leader_last_contact_time
        on: consul.raft_leader_last_contact_time
     class: Errors
