add_iss_alerts: Add alerts for connections

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -137,3 +137,31 @@ component: Disk
     delay: down 15m multiplier 1.5 max 1h
      info: disk space utilization
        to: sysadmin
+
+### IIS
+ template: wmi_hidden_avg_iis_connections
+       on: wmi.iis_website_active_connections_count
+    class: Utilization
+     type: Windows
+component: IIS
+       os: *
+    hosts: *
+   lookup: average -1m of active
+     calc: ($this == 0)?(1):($this)
+    units: connections
+    every: 10s
+     info: Calc connection average used as basis to raise an alert for $label:website.
+       to: silent
+
+ template: wmi_iis_connections
+       on: wmi.iis_website_active_connections_count
+    class: Utilization
+     type: Windows
+component: IIS
+       os: *
+    hosts: *
+   lookup: sum -10s of active
+     warn: ($wmi_hidden_avg_iis_connections_active > 120) ? ($this > 2*$wmi_avg_hidden_iis_connections_active) : (0)
+     crit: ($wmi_hidden_avg_iis_connections_active > 120) ? ($this > 3*$wmi_avg_hidden_iis_connections_active) : (0)
+     info: There is a increase number of connections for $label:website.
+       to: sysadmin
