add_iss_alerts: Add alerts for bad requests

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -165,3 +165,32 @@ component: IIS
      crit: ($wmi_hidden_avg_iis_connections_active > 120) ? ($this > 3*$wmi_avg_hidden_iis_connections_active) : (0)
      info: There is a increase number of connections for $label:website.
        to: sysadmin
+
+ template: wmi_hidden_sum_iis_connections
+       on: wmi.iis_website_active_connections_count
+    class: Utilization
+     type: Windows
+component: IIS
+       os: *
+    hosts: *
+   lookup: sum -1m of active
+     calc: ($this == 0)?(1):($this)
+    units: connections
+    every: 10s
+     info: Total number of connections used as basis to raise an alert for $label:website.
+       to: silent
+
+ template: wmi_iis_1m_bad_requests
+       on: wmi.iis_website_errors_rate
+    class: Errors
+     type: Windows
+component: IIS
+ families: *
+   lookup: sum -1m unaligned of document_not_found
+     calc: $this * 100 / $wmi_hidden_sum_iis_connections
+    units: %
+    every: 10s
+     warn: ($wmi_hidden_sum_iis_connections > 120) ? ($this > (($status >= $WARNING)  ? ( 10 ) : ( 30 )) ) : ( 0 )
+    delay: up 2m down 15m multiplier 1.5 max 1h
+     info: ratio of HTTP requests not found
+       to: webmaster
