add_iss_alerts: Add alerts for locked requests

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -194,3 +194,18 @@ component: IIS
     delay: up 2m down 15m multiplier 1.5 max 1h
      info: ratio of HTTP requests not found
        to: webmaster
+
+ template: wmi_iis_1m_locked_requests
+       on: wmi.iis_website_errors_rate
+    class: Errors
+     type: Windows
+component: IIS
+ families: *
+   lookup: sum -1m unaligned of document_locked
+     calc: $this * 100 / $wmi_hidden_sum_iis_connections
+    units: %
+    every: 10s
+     warn: ($wmi_hidden_sum_iis_connections > 120) ? ($this > (($status >= $WARNING)  ? ( 5 ) : ( 20 )) ) : ( 0 )
+    delay: up 2m down 15m multiplier 1.5 max 1h
+     info: ratio of HTTP requests not found
+       to: webmaster
