add_iss_alerts: Convert IIS alerts to TCP connections

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -138,31 +138,24 @@ component: Disk
      info: disk space utilization
        to: sysadmin
 
-### IIS
- template: wmi_hidden_avg_iis_connections
-       on: wmi.iis_website_active_connections_count
-    class: Utilization
+### TCP
+# Source: https://learn.microsoft.com/en-us/troubleshoot/windows-server/networking/default-dynamic-port-range-tcpip-chang
+# Windows by default allows 16383 (Windows 2008 or newer) and 3976 (old versions) parallel ports.
+#
+# We are adopting conservative values.
+#
+ template: wmi_concurrent_tcp
+       on: wmi.tcp_conns_active
+    class: TCP
      type: Windows
 component: IIS
        os: *
     hosts: *
-   lookup: average -1m of active
-     calc: ($this == 0)?(1):($this)
+   lookup: sum -1m of ipv4,ipv6
     units: connections
     every: 10s
-     info: Calc connection average used as basis to raise an alert for $label:website.
+     warn: $this > (($status >= $WARNING)  ? (2783) : (2385))
+     crit: $this > (($status == $CRITICAL) ? (3578) : (3180))
+     info: Number of ports used is reaching levels that won't accept more connections.
        to: silent
-
- template: wmi_iis_connections
-       on: wmi.iis_website_active_connections_count
-    class: Utilization
-     type: Windows
-component: IIS
-       os: *
-    hosts: *
-   lookup: sum -10s of active
-     warn: ($wmi_hidden_avg_iis_connections_active > 120) ? ($this > 2*$wmi_avg_hidden_iis_connections_active) : (0)
-     crit: ($wmi_hidden_avg_iis_connections_active > 120) ? ($this > 3*$wmi_avg_hidden_iis_connections_active) : (0)
-     info: There is a increase number of connections for $label:website.
-       to: sysadmin
 
