--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -159,3 +159,32 @@ component: IIS
      info: Number of ports used is reaching levels that won't accept more connections.
        to: silent
 
+ template: wmi_1m_ip_tcp_resets
+       on: wmi.tcp_conns_resets
+    class: Errors
+     type: Windows
+component: Network
+       os: *
+    hosts: *
+   lookup: average -1m at -10s unaligned absolute of ipv4,ipv6
+    units: tcp resets/s
+    every: 10s
+     info: average number of TCP RESETS over the last minute
+
+ template: wmi_10s_ip_tcp_resets
+       on: wmi.tcp_conns_active
+    class: Errors
+     type: System
+component: Network
+       os: *
+    hosts: *
+   lookup: average -10s unaligned absolute of OutRsts
+    units: tcp resets/s
+    every: 10s
+     warn: $netdata.uptime.uptime > (1 * 60) AND $this > ((($wmi_1m_ip_tcp_resets < 5)?(5):($wmi_1m_ip_tcp_resets)) * (($status >= $WARNING)  ? (1) : (10)))
+    delay: up 20s down 60m multiplier 1.2 max 2h
+  options: no-clear-notification
+     info: average number of sent TCP RESETS over the last 10 seconds. \
+           This can indicate a port scan, \
+           or that a service running on this host has crashed. \
+           Netdata will not send a clear notification for this alarm.
