add_iss_alerts: Improve calculation for alert

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -151,7 +151,7 @@ component: Disk
 component: IIS
        os: *
     hosts: *
-   lookup: sum -1m of ipv4,ipv6
+     calc: $ipv4 + $ipv6
     units: connections
     every: 10s
      warn: $this > (($status >= $WARNING)  ? (2783) : (2385))
