add_iss_alerts: Add IIS congestion alert

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -188,3 +188,22 @@ component: Network
            This can indicate a port scan, \
            or that a service running on this host has crashed. \
            Netdata will not send a clear notification for this alarm.
+
+
+### IIS
+# Source: https://learn.microsoft.com/en-us/answers/questions/495615/how-to-set-to-allow-maximumtcp-connection-in-windo.html
+# We have an alert to notify when TCP ports are exausted, but conggestion can conduct serves for another issue.
+ template: wmi_iis_congestion
+       on: wmi.iis_website_active_connections_count
+    class: Utilization
+     type: Windows
+component: IIS
+       os: *
+    hosts: *
+   lookup: sum -10s of active
+    units: connections
+    every: 10s
+     warn: $this > (($status >= $WARNING)  ? (400) : (350))
+     crit: $this > (($status == $CRITICAL) ? (450) : (400))
+     info: You are having a higher number of active connections for $label:website, depending of hardware and configuration you can reach TCP congestion.
+       to: silent
