add_iss_alerts: Add hit ratio alert for MSSQL

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -210,3 +210,22 @@ component: IIS
      info: You are having a higher number of active connections for $label:website, \
            depending of hardware and configuration you can reach TCP congestion.
        to: sysadmin
+
+### MSSQL
+# Source: https://www.aimbetter.com/cache-hit-ratio/
+ template: wmi_mssql_hit_ratio
+       on: wmi.mssql_instance_cache_hit_ratio
+    class: Workload
+     type: Windows
+component: MSSQL
+       os: *
+    hosts: *
+   lookup: average -1m unaligned of hit_ratio
+    units: %
+    every: 10s
+     warn: $this < (($status >= $WARNING)  ? (80) : (70))
+     crit: $this < (($status == $CRITICAL) ? (69) : (50))
+    delay: down 15m multiplier 1.5 max 1h
+     info: Average cache hit ratio in db $label:mssql_instance over the last minute
+       to: sysadmin
+
