add_iss_alerts: MSSQL blocked process

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -229,3 +229,19 @@ component: MSSQL
      info: Average cache hit ratio in db $label:mssql_instance over the last minute
        to: sysadmin
 
+ template: wmi_mssql_blocked_processes
+       on: wmi.mssql_instance_blocked_processes
+    class: Workload
+     type: Windows
+component: MSSQL
+       os: *
+    hosts: *
+   lookup: average -30s unaligned of blocked
+    units: %
+    every: 10s
+     warn: $this > (($status >= $WARNING)  ? (25) : (30))
+     crit: $this > (($status == $CRITICAL) ? (40) : (50))
+    delay: down 5m multiplier 2.0 max 1h
+     info: A high number of process has been blocked in past 30s
+       to: sysadmin
+
