add_iss_alerts: MSSQL add alert for offline

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -242,6 +242,21 @@ component: MSSQL
      warn: $this > (($status >= $WARNING)  ? (25) : (30))
      crit: $this > (($status == $CRITICAL) ? (40) : (50))
     delay: down 5m multiplier 2.0 max 1h
-     info: A high number of process has been blocked in past 30s
+     info: A high number of process has been blocked in past 30s for $label:mssql_instance
+       to: sysadmin
+
+ template: wmi_mssql_error_offline
+       on: wmi.mssql_instance_blocked_processes
+    class: Error
+     type: Windows
+component: MSSQL
+       os: *
+    hosts: *
+   lookup: average -30s unaligned of blocked
+    units: errors
+    every: 10s
+     crit: $netdata.uptime.uptime > (60) AND $this != 0
+    delay: down 2m multiplier 2.0 max 1h
+     info: Instance $label:mssql_instance is offline
        to: sysadmin
 
