add_iss_alerts: MSSQL adjust last alert

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -256,7 +256,7 @@ component: MSSQL
     units: errors
     every: 10s
      crit: $netdata.uptime.uptime > (60) AND $this != 0
-    delay: down 2m multiplier 2.0 max 1h
+    delay: down 1m multiplier 2.0 max 30m
      info: Instance $label:mssql_instance is offline
        to: sysadmin
 
