add_iss_alerts: MSSQL Error Kill connection

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -260,3 +260,19 @@ component: MSSQL
      info: Instance $label:mssql_instance is offline
        to: sysadmin
 
+ template: wmi_mssql_error_kill_connection
+       on: wmi.mssql_instance_blocked_processes
+    class: Error
+     type: Windows
+component: MSSQL
+       os: *
+    hosts: *
+   lookup: sum -1m unaligned of Kill*
+    units: errors
+    every: 10s
+     warn: $this > (($status >= $WARNING)  ? (15) : (10))
+     crit: $this > (($status == $CRITICAL) ? (30) : (20))
+    delay: down 1m multiplier 2.0 max 30m
+     info: High number of killed connection for $label:mssql_instance.
+       to: sysadmin
+
