--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -276,3 +276,19 @@ component: MSSQL
      info: High number of killed connection for $label:mssql_instance.
        to: sysadmin
 
+ template: wmi_mssql_lock_wait
+       on: wmi.mssql_instance_locks_lock_wait
+    class: Utilization
+     type: Windows
+component: MSSQL
+       os: *
+    hosts: *
+   lookup: average -1m unaligned foreach *
+    units: miliseconds
+    every: 30s
+     warn: $this > (($status >= $WARNING)  ? (1000) : (2000))
+     crit: $this > (($status == $CRITICAL) ? (5000) : (2000))
+    delay: down 10m multiplier 1.5 max 1h
+     info: A long wait to lock for $label:mssql_instance.
+       to: sysadmin
+
