add_iss_alerts: Fix alert

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -157,7 +157,7 @@ component: IIS
      warn: $this > (($status >= $WARNING)  ? (2783) : (2385))
      crit: $this > (($status == $CRITICAL) ? (3578) : (3180))
      info: Number of ports used is reaching levels that won't accept more connections.
-       to: silent
+       to: sysadmin
 
  template: wmi_1m_ip_tcp_resets
        on: wmi.tcp_conns_resets
