add_iss_alerts: Add alert for TCP exaustion

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -292,3 +292,20 @@ component: MSSQL
      info: A long wait to lock for $label:mssql_instance.
        to: sysadmin
 
+ template: wmi_mssql_user_connection
+       on: wmi.mssql_instance_user_connection
+    class: Utilization
+     type: Windows
+component: MSSQL
+       os: *
+    hosts: *
+   lookup: sum -10s of active
+    units: connections
+    every: 10s
+     warn: $this > (($status >= $WARNING)  ? (375) : (325))
+     crit: $this > (($status == $CRITICAL) ? (425) : (375))
+    delay: up 20s down 20m multiplier 1.2 max 2h
+     info: You are having a higher number of active connections for $label:mssql_instance, \
+           depending of hardware and configuration you can reach TCP congestion.
+       to: sysadmin
+
