--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -201,12 +201,12 @@ component: Network
 component: IIS
        os: *
     hosts: *
-   lookup: sum -10s of active
+   lookup: average -30s of active
     units: connections
     every: 10s
      warn: $this > (($status >= $WARNING)  ? (375) : (325))
      crit: $this > (($status == $CRITICAL) ? (425) : (375))
-    delay: up 20s down 20m multiplier 1.2 max 2h
+    delay: up 1m down 20m multiplier 1.2 max 2h
      info: You are having a higher number of active connections for $label:website, \
            depending of hardware and configuration you can reach TCP congestion.
        to: sysadmin
