add_iss_alerts: Change chart

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -246,13 +246,13 @@ component: MSSQL
        to: sysadmin
 
  template: wmi_mssql_error_offline
-       on: wmi.mssql_instance_blocked_processes
+       on: wmi.mssql_instance_sql_errors_total
     class: Error
      type: Windows
 component: MSSQL
        os: *
     hosts: *
-   lookup: average -30s unaligned of blocked
+   lookup: average -30s unaligned of offline
     units: errors
     every: 10s
      crit: $netdata.uptime.uptime > (60) AND $this != 0
@@ -261,7 +261,7 @@ component: MSSQL
        to: sysadmin
 
  template: wmi_mssql_error_kill_connection
-       on: wmi.mssql_instance_blocked_processes
+       on: wmi.mssql_instance_sql_errors_total
     class: Error
      type: Windows
 component: MSSQL
