Serial logs collector should be disabled by default

--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -277,7 +277,7 @@
 [Serial logs]
 	# Example: Log collector that will collect logs from a serial interface.
 
-	enabled = yes
+	enabled = no
 	update every = 1
 	log type = flb_serial
 	circular buffer max size = 64 # in MiB
