--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -413,11 +413,10 @@ jobs:
       - name: Prepare artifact directory
         id: prepare
         run: |
-          mkdir -p artifacts/download/test || exit 1
-          echo "9999.0.0-0" > artifacts/download/test/latest-version.txt || exit 1
-          cp dist-tarball/* artifacts/download/test || exit 1
-          echo 'Redirect 301 "/latest" "/test"' > artifacts/.htaccess || exit 1
-          cd artifacts/download/test || exit 1
+          mkdir -p artifacts/download/latest || exit 1
+          echo "9999.0.0-0" > artifacts/download/latest/latest-version.txt || exit 1
+          cp dist-tarball/* artifacts/download/latest || exit 1
+          cd artifacts/download/latest || exit 1
           ln -s ${{ needs.build-dist.outputs.distfile }} netdata-latest.tar.gz || exit 1
           sha256sum -b ./* > "sha256sums.txt" || exit 1
           cat sha256sums.txt
