fix july and event_loop

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -471,6 +471,8 @@ set(LIBNETDATA_FILES
         libnetdata/eval/eval.h
         libnetdata/health/health.c
         libnetdata/health/health.h
+        libnetdata/july/july.c
+        libnetdata/july/july.h
         libnetdata/inlined.h
         libnetdata/json/json.c
         libnetdata/json/json.h
@@ -510,8 +512,6 @@ set(LIBNETDATA_FILES
         libnetdata/string/utf8.h
         libnetdata/worker_utilization/worker_utilization.c
         libnetdata/worker_utilization/worker_utilization.h
-		libnetdata/event_loop/event_loop.c
-        libnetdata/event_loop/event_loop.h
         )
 
 IF(ENABLE_PLUGIN_EBPF)
@@ -1008,6 +1008,8 @@ set(DAEMON_FILES
         daemon/common.h
         daemon/daemon.c
         daemon/daemon.h
+        daemon/event_loop.c
+        daemon/event_loop.h
         daemon/global_statistics.c
         daemon/global_statistics.h
         daemon/analytics.c
