--- a/.github/data/distros.yml
+++ b/.github/data/distros.yml
@@ -35,159 +35,159 @@ include:
   - <<: *alpine
     version: "3.14"
 
-  - distro: archlinux
-    version: latest
-    env_prep: |
-      pacman --noconfirm -Syu && pacman --noconfirm -Sy grep libffi
-    test:
-      ebpf-core: true
+  # - distro: archlinux
+  #   version: latest
+  #   env_prep: |
+  #     pacman --noconfirm -Syu && pacman --noconfirm -Sy grep libffi
+  #   test:
+  #     ebpf-core: true
 
-  - &alma
-    distro: almalinux
-    version: "9"
-    base_image: almalinux
-    jsonc_removal: |
-      dnf remove -y json-c-devel
-    packages: &alma_packages
-      type: rpm
-      repo_distro: el/9
-      alt_links:
-        - el/9Server
-        - el/9Client
-      arches:
-        - x86_64
-        - aarch64
-    test:
-      ebpf-core: true
-  - <<: *alma
-    version: "8"
-    packages:
-      <<: *alma_packages
-      repo_distro: el/8
-      alt_links:
-        - el/8Server
-        - el/8Client
+  # - &alma
+  #   distro: almalinux
+  #   version: "9"
+  #   base_image: almalinux
+  #   jsonc_removal: |
+  #     dnf remove -y json-c-devel
+  #   packages: &alma_packages
+  #     type: rpm
+  #     repo_distro: el/9
+  #     alt_links:
+  #       - el/9Server
+  #       - el/9Client
+  #     arches:
+  #       - x86_64
+  #       - aarch64
+  #   test:
+  #     ebpf-core: true
+  # - <<: *alma
+  #   version: "8"
+  #   packages:
+  #     <<: *alma_packages
+  #     repo_distro: el/8
+  #     alt_links:
+  #       - el/8Server
+  #       - el/8Client
 
-  - distro: centos
-    version: "7"
-    packages:
-      type: rpm
-      repo_distro: el/7
-      alt_links:
-        - el/7Server
-        - el/7Client
-      arches:
-        - x86_64
-    test:
-      ebpf-core: false
+  # - distro: centos
+  #   version: "7"
+  #   packages:
+  #     type: rpm
+  #     repo_distro: el/7
+  #     alt_links:
+  #       - el/7Server
+  #       - el/7Client
+  #     arches:
+  #       - x86_64
+  #   test:
+  #     ebpf-core: false
 
-  - &debian
-    distro: debian
-    version: "11"
-    env_prep: |
-      apt-get update
-    jsonc_removal: |
-      apt-get purge -y libjson-c-dev
-    packages: &debian_packages
-      type: deb
-      repo_distro: debian/bullseye
-      arches:
-        - i386
-        - amd64
-        - armhf
-        - arm64
-    test:
-      ebpf-core: true
-  - <<: *debian
-    version: "10"
-    packages:
-      <<: *debian_packages
-      repo_distro: debian/buster
-    test:
-      ebpf-core: false
+  # - &debian
+  #   distro: debian
+  #   version: "11"
+  #   env_prep: |
+  #     apt-get update
+  #   jsonc_removal: |
+  #     apt-get purge -y libjson-c-dev
+  #   packages: &debian_packages
+  #     type: deb
+  #     repo_distro: debian/bullseye
+  #     arches:
+  #       - i386
+  #       - amd64
+  #       - armhf
+  #       - arm64
+  #   test:
+  #     ebpf-core: true
+  # - <<: *debian
+  #   version: "10"
+  #   packages:
+  #     <<: *debian_packages
+  #     repo_distro: debian/buster
+  #   test:
+  #     ebpf-core: false
 
-  - &fedora
-    distro: fedora
-    version: "37"
-    jsonc_removal: |
-      dnf remove -y json-c-devel
-    packages: &fedora_packages
-      type: rpm
-      repo_distro: fedora/37
-      arches:
-        - x86_64
-        - aarch64
-    test:
-      ebpf-core: true
-  - <<: *fedora
-    version: "36"
-    packages:
-      <<: *fedora_packages
-      repo_distro: fedora/36
-    test:
-      ebpf-core: true
+  # - &fedora
+  #   distro: fedora
+  #   version: "37"
+  #   jsonc_removal: |
+  #     dnf remove -y json-c-devel
+  #   packages: &fedora_packages
+  #     type: rpm
+  #     repo_distro: fedora/37
+  #     arches:
+  #       - x86_64
+  #       - aarch64
+  #   test:
+  #     ebpf-core: true
+  # - <<: *fedora
+  #   version: "36"
+  #   packages:
+  #     <<: *fedora_packages
+  #     repo_distro: fedora/36
+  #   test:
+  #     ebpf-core: true
 
-  - &opensuse
-    distro: opensuse
-    version: "15.4"
-    base_image: opensuse/leap
-    jsonc_removal: |
-      zypper rm -y libjson-c-devel
-    packages: &opensuse_packages
-      type: rpm
-      repo_distro: opensuse/15.4
-      arches:
-        - x86_64
-        - aarch64
-    test:
-      ebpf-core: true
+  # - &opensuse
+  #   distro: opensuse
+  #   version: "15.4"
+  #   base_image: opensuse/leap
+  #   jsonc_removal: |
+  #     zypper rm -y libjson-c-devel
+  #   packages: &opensuse_packages
+  #     type: rpm
+  #     repo_distro: opensuse/15.4
+  #     arches:
+  #       - x86_64
+  #       - aarch64
+  #   test:
+  #     ebpf-core: true
 
-  - &oracle
-    distro: oraclelinux
-    version: "8"
-    jsonc_removal: |
-      dnf remove -y json-c-devel
-    packages: &oracle_packages
-      type: rpm
-      repo_distro: ol/8
-      arches:
-        - x86_64
-        - aarch64
-    test:
-      ebpf-core: true
-  - <<: *oracle
-    version: "9"
-    packages:
-      <<: *oracle_packages
-      repo_distro: ol/9
+  # - &oracle
+  #   distro: oraclelinux
+  #   version: "8"
+  #   jsonc_removal: |
+  #     dnf remove -y json-c-devel
+  #   packages: &oracle_packages
+  #     type: rpm
+  #     repo_distro: ol/8
+  #     arches:
+  #       - x86_64
+  #       - aarch64
+  #   test:
+  #     ebpf-core: true
+  # - <<: *oracle
+  #   version: "9"
+  #   packages:
+  #     <<: *oracle_packages
+  #     repo_distro: ol/9
 
-  - &ubuntu
-    distro: ubuntu
-    version: "22.10"
-    env_prep: |
-      rm -f /etc/apt/apt.conf.d/docker && apt-get update
-    jsonc_removal: |
-      apt-get remove -y libjson-c-dev
-    packages: &ubuntu_packages
-      type: deb
-      repo_distro: ubuntu/kinetic
-      arches:
-        - amd64
-        - armhf
-        - arm64
-    test:
-      ebpf-core: true
-  - <<: *ubuntu
-    version: "22.04"
-    packages:
-      <<: *ubuntu_packages
-      repo_distro: ubuntu/jammy
-  - <<: *ubuntu
-    version: "20.04"
-    packages:
-      <<: *ubuntu_packages
-      repo_distro: ubuntu/focal
-  - <<: *ubuntu
+  # - &ubuntu
+  #   distro: ubuntu
+  #   version: "22.10"
+  #   env_prep: |
+  #     rm -f /etc/apt/apt.conf.d/docker && apt-get update
+  #   jsonc_removal: |
+  #     apt-get remove -y libjson-c-dev
+  #   packages: &ubuntu_packages
+  #     type: deb
+  #     repo_distro: ubuntu/kinetic
+  #     arches:
+  #       - amd64
+  #       - armhf
+  #       - arm64
+  #   test:
+  #     ebpf-core: true
+  # - <<: *ubuntu
+  #   version: "22.04"
+  #   packages:
+  #     <<: *ubuntu_packages
+  #     repo_distro: ubuntu/jammy
+  # - <<: *ubuntu
+  #   version: "20.04"
+  #   packages:
+  #     <<: *ubuntu_packages
+  #     repo_distro: ubuntu/focal
+  # - <<: *ubuntu
     version: "18.04"
     packages:
       <<: *ubuntu_packages
