--- a/.github/data/distros.yml
+++ b/.github/data/distros.yml
@@ -188,14 +188,14 @@ include:
   #     <<: *ubuntu_packages
   #     repo_distro: ubuntu/focal
   # - <<: *ubuntu
-    version: "18.04"
-    packages:
-      <<: *ubuntu_packages
-      repo_distro: ubuntu/bionic
-      arches:
-        - i386
-        - amd64
-        - armhf
-        - arm64
-    test:
-      ebpf-core: false
+  #   version: "18.04"
+  #   packages:
+  #     <<: *ubuntu_packages
+  #     repo_distro: ubuntu/bionic
+  #     arches:
+  #       - i386
+  #       - amd64
+  #       - armhf
+  #       - arm64
+  #   test:
+  #     ebpf-core: false
