add_iss_alerts: Fix chart

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -146,13 +146,13 @@ component: Disk
 component: Network
        os: *
     hosts: *
-   lookup: average -1m at -10s unaligned absolute of ipv4,ipv6
+   lookup: average -1m unaligned absolute of ipv4,ipv6
     units: tcp resets/s
     every: 10s
      info: average number of TCP RESETS over the last minute
 
  template: wmi_10s_ip_tcp_resets
-       on: wmi.tcp_conns_active
+       on: wmi.tcp_conns_resets
     class: Errors
      type: System
 component: Network
