Match ebpf code files more specifically in RPM spec file.

--- a/netdata.spec.in
+++ b/netdata.spec.in
@@ -644,7 +644,7 @@ Group: Applications/System
 
 %files plugin-ebpf-code
 %defattr(0640,root,netdata,0640)
-%{_libexecdir}/%{name}/plugins.d/ebpf.d
+%{_libexecdir}/%{name}/plugins.d/ebpf.d/*.o
 
 %endif
 
