Fix branding and dependencies for RPM packages.
- Change the eBPF plugin legacy code package name and description to
  reflect what it actually is.
- Properly have the new plugin packages conflict with the older Netdata
  packages. This is needed for updates to work cleanly.
- Only require the eBPF legacy code on older systems that need it.

--- a/netdata.spec.in
+++ b/netdata.spec.in
@@ -575,10 +575,11 @@ Requires: netdata = %{version}
 Summary: The NFACCT metrics collection plugin for the Netdata Agent
 Group: Applications/System
 Requires: libmnl
+Requires: netdata = %{version}
+Conflicts: netdata <= %{version}
 %if 0%{?fedora} || 0%{?suse_version} >= 1140
 Requires: libnetfilter_acct
 %endif
-Requires: netdata = %{version}
 
 %description plugin-nfacct
  This plugin allows the Netdata Agent to collect metrics from the firewall using NFACCT objects.
@@ -592,6 +593,7 @@ Summary: The charts.d metrics collection plugin for the Netdata Agent
 Group: Applications/System
 Requires: bash
 Requires: netdata = %{version}
+Conflicts: netdata <= %{version}
 %if 0%{?centos_ver} != 7
 Suggests: nut
 Suggests: apcupsd
@@ -617,12 +619,16 @@ It includes collectors for NUT, APCUPSD, LibreSWAN, OpenSIPS, and Wireless acces
 Summary: The eBPF metrics collection plugin for the Netdata Agent
 Group: Applications/System
 Requires: netdata = %{version}
+Conflicts: netdata <= %{version}
 %if 0%{?centos_ver} != 7
 Recommends: netdata-plugin-apps = %{version}
-Recommends: netdata-plugin-ebpf-code >= %{version}
 %else
 Requires: netdata-plugin-apps = %{version}
-Requires: netdata-plugin-ebpf-code >= %{version}
+%endif
+%if 0%{?centos_ver} > 8 || 0%{?fedora} >= 35 || 0%{?suse_version} >= 1500
+Suggests: netdata-ebpf-legacy-code >= %{version}
+%else
+Requires: netdata-ebpf-legacy-code >= %{version}
 %endif
 
 %description plugin-ebpf
@@ -635,14 +641,17 @@ Requires: netdata-plugin-ebpf-code >= %{version}
 %{_libdir}/%{name}/conf.d/ebpf.d.conf
 %{_libdir}/%{name}/conf.d/ebpf.d
 
-%package plugin-ebpf-code
-Summary: Compiled eBPF code for the Netdata eBPF plugin
+%package ebpf-legacy-code
+Summary: Compiled eBPF legacy code for the Netdata eBPF plugin
 Group: Applications/System
+Requires: netdata-plugin-ebpf = %{version}
+Conflicts: netdata <= %{version}
 
-%description plugin-ebpf-code
- This package provides the pre-compiled eBPF code for use by the Netdata eBPF plugin.
+%description ebpf-legacy-code
+ This package provides the pre-compiled eBPF legacy code for use by the Netdata eBPF plugin.
+This code is only needed when using the eBPF plugin with kernel versions before 5.10.
 
-%files plugin-ebpf-code
+%files ebpf-legacy-code
 %defattr(0640,root,netdata,0640)
 %{_libexecdir}/%{name}/plugins.d/ebpf.d/*.o
 
@@ -652,6 +661,7 @@ Group: Applications/System
 Summary: The python.d metrics collection plugin for the Netdata Agent
 Group: Applications/System
 Requires: netdata = %{version}
+Conflicts: netdata <= %{version}
 %if 0%{?centos_ver} == 7 || 0%{?centos_ver} == 6
 Requires: python
 %else
@@ -682,6 +692,7 @@ want to use those versions instead of the Python versions.
 Summary: The go.d metrics collection plugin for the Netdata Agent
 Group: Applications/System
 Requires: netdata = %{version}
+Conflicts: netdata <= %{version}
 %if 0%{?centos_ver} != 7
 Suggests: nvme-cli
 Suggests: sudo
@@ -705,6 +716,7 @@ so most users will want it installed.
 Summary: The per-application metrics collection plugin for the Netdata Agent
 Group: Applications/System
 Requires: netdata = %{version}
+Conflicts: netdata <= %{version}
 
 %description plugin-apps
  This plugin allows the Netdata Agent to collect per-application and per-user metrics without using cgroups.
@@ -720,6 +732,7 @@ Requires: netdata = %{version}
 Summary: The slabinfo metrics collector for the Netdata Agent
 Group: Applications/System
 Requires: netdata = %{version}
+Conflicts: netdata <= %{version}
 
 %description plugin-slabinfo
  This plugin allows the Netdata Agent to collect perfromance and utilization metrics for the Linux kernel’s SLAB allocator.
@@ -733,6 +746,7 @@ Requires: netdata = %{version}
 Summary: The perf metrics collector for the Netdata Agent
 Group: Applications/System
 Requires: netdata = %{version}
+Conflicts: netdata <= %{version}
 
 %description plugin-perf
  This plugin allows the Netdata to collect metrics from the Linux perf subsystem.
