--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -66,7 +66,7 @@ Package: netdata-plugin-freeipmi
 Architecture: any
 Depends: freeipmi,
          ${shlibs:Depends},
-         netdata (= ${source:Version})
+         netdata (>= ${source:Version})
 Description: The FreeIPMI metrics collection plugin for the Netdata Agent
  This plugin allows the Netdata Agent to collect metrics from hardware
  using FreeIPMI.
@@ -75,6 +75,7 @@ Package: netdata-plugin-nfacct
 Architecture: any
 Depends: ${shlibs:Depends},
          netdata (>= ${source:Version})
+Conflicts: netdata (< ${source:Version})
 Description: The NFACCT metrics collection plugin for the Netdata Agent
  This plugin allows the Netdata Agent to collect metrics from the firewall
  using NFACCT objects.
@@ -83,6 +84,7 @@ Package: netdata-plugin-chartsd
 Architecture: all
 Depends: bash,
          netdata (>= ${source:Version})
+Conflicts: netdata (< ${source:Version})
 Suggests: apcupsd, nut, iw, sudo
 Description: The charts.d metrics collection plugin for the Netdata Agent
  This plugin adds a selection of additional collectors written in shell
@@ -93,23 +95,28 @@ Package: netdata-plugin-ebpf
 Architecture: any
 Depends: ${shlibs:Depends},
          netdata (>= ${source:Version})
-Recommends: netdata-plugin-ebpf-code (>= ${source:Version}),
+Recommends: netdata-ebpf-code-legacy (>= ${source:Version}),
             netdata-plugin-apps (>= ${source:Version})
+Conflicts: netdata (< ${source:Version})
 Description: The eBPF metrics collection plugin for the Netdata Agent
  This plugin allows the Netdata Agent to use eBPF code to collect more
  detailed kernel-level metrics for the system.
 
-Package: netdata-plugin-ebpf-code
+Package: netdata-ebpf-code-legacy
 Architecture: i386 amd64
-Description: Compiled eBPF code for the Netdata eBPF plugin
- This package provides the pre-compiled eBPF code for use by the Netdata
- eBPF plugin.
+Depends: netdata-plugin-ebpf (= ${source:Version})
+Conflicts: netdata (< ${source:Version})
+Description: Compiled eBPF legacy code for the Netdata eBPF plugin
+ This package provides the pre-compiled eBPF legacy code for use by
+ the Netdata eBPF plugin.  This code is only needed when using the eBPF
+ plugin with kernel versions before 5.10.
 
 Package: netdata-plugin-pythond
 Architecture: all
 Depends: ${shlibs:Depends},
          netdata (>= ${source:Version})
 Suggests: sudo
+Conflicts: netdata (< ${source:Version})
 Description: The python.d metrics collection plugin for the Netdata Agent
  Many of the collectors provided by this package are also available
  in netdata-plugin-god. In msot cases, you probably want to use those
@@ -121,6 +128,7 @@ Depends: ${shlibs:Depends},
          libcap2-bin,
          netdata (>= ${source:Version})
 Suggests: nvme-cli, sudo
+Conflicts: netdata (< ${source:Version})
 Description: The go.d metrics collection plugin for the Netdata Agent
  This plugin adds a selection of additional collectors written in Go to
  the Netdata Agent A significant percentage of the application specific
@@ -132,6 +140,7 @@ Architecture: any
 Depends: ${shlibs:Depends},
          libcap2-bin,
          netdata (>= ${source:Version})
+Conflicts: netdata (< ${source:Version})
 Description: The per-application metrics collection plugin for the Netdata Agent
  This plugin allows the Netdata Agent to collect per-application and
  per-user metrics without using cgroups.
@@ -141,6 +150,7 @@ Architecture: any
 Depends: ${shlibs:Depends},
          libcap2-bin,
          netdata (>= ${source:Version})
+Conflicts: netdata (< ${source:Version})
 Description: The slabinfo metrics collector for the Netdata Agent
  This plugin allows the Netdata Agent to collect perfromance and
  utilization metrics for the Linux kernel’s SLAB allocator.
@@ -150,6 +160,7 @@ Architecture: any
 Depends: ${shlibs:Depends},
          libcap2-bin,
          netdata (>= ${source:Version})
+Conflicts: netdata (< ${source:Version})
 Description: The perf metrics collector for the Netdata Agent
  This plugin allows the Netdata to collect metrics from the Linux perf
  subsystem.
