--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -16,7 +16,7 @@ collectors/charts.d.plugin/ @ilyam8 @Ferroin
 collectors/freebsd.plugin/ @thiagoftsm
 collectors/macos.plugin/ @thiagoftsm
 collectors/python.d.plugin/ @ilyam8
-collectors/cups.plugin/ @simonnagl @thiagoftsm
+collectors/cups.plugin/ @thiagoftsm
 exporting/ @thiagoftsm
 daemon/ @thiagoftsm @vkalintiris
 database/ @thiagoftsm @vkalintiris
