Build judyltablesgen for host when cross-compiling
Fixes #14185

--- a/configure.ac
+++ b/configure.ac
@@ -54,6 +54,8 @@ else
   AC_CHECK_TOOL([AR], [ar])
 fi
 
+AX_PROG_CC_FOR_BUILD
+
 # -----------------------------------------------------------------------------
 # configurable options
 
