--- a/packaging/docker/Dockerfile
+++ b/packaging/docker/Dockerfile
@@ -125,5 +125,5 @@ LABEL org.opencontainers.image.url="https://netdata.cloud"
 LABEL org.opencontainers.image.documentation="https://learn.netdata.cloud"
 LABEL org.opencontainers.image.source="https://github.com/netdata/netdata"
 LABEL org.opencontainers.image.title="Netdata Agent"
-LABEL org.opencontainers.image.description="Official Netdata Agent Docker Imaage"
+LABEL org.opencontainers.image.description="Official Netdata Agent Docker Image"
 LABEL org.opencontainers.image.vendor="Netdata Inc."
