add_iss_alerts: Add IIS alerts and remove previous one

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -170,25 +170,50 @@ component: Network
            Netdata will not send a clear notification for this alarm.
        to: sysadmin
 
-
 ### IIS
-# Source: https://learn.microsoft.com/en-us/answers/questions/495615/how-to-set-to-allow-maximumtcp-connection-in-windo.html
-# We have an alert to notify when TCP ports are exausted, but conggestion can conduct serves for another issue.
- template: wmi_iis_congestion
-       on: wmi.iis_website_active_connections_count
+ template: iis_request_throughput
+       on: iis.website_requests_rate
     class: Utilization
      type: Windows
 component: IIS
        os: *
     hosts: *
-   lookup: average -30s of active
-    units: connections
+   lookup: average -1m of requests
+    units: requests
     every: 10s
-     warn: $this > (($status >= $WARNING)  ? (375) : (325))
-     crit: $this > (($status == $CRITICAL) ? (425) : (375))
-    delay: up 1m down 20m multiplier 1.2 max 2h
-     info: You are having a higher number of active connections for $label:website, \
-           depending of hardware and configuration you can reach TCP congestion.
+     warn: ($this > 120) ? ($requests < (($status >= $WARNING) ?  ($this * 0.5) : ($this * 0.4)) ) : (0)
+     crit: ($this > 120) ? ($requests < (($status == $CRITICAL) ? ($this * 0.2) : ($this * 0.4)) ) : (0)
+    delay: up 2m down 15m multiplier 1.5 max 1h
+     info: A rapid decrease in requests can indicate infra issues.
+       to: sysadmin
+
+# Keeping this silent, because a log analysis is also necessary for this event
+ template: iis_error_locked
+       on: iis.website_errors_rate
+    class: Utilization
+     type: Windows
+component: IIS
+       os: *
+    hosts: *
+   lookup: average -1m of document_locked
+    units: requests
+    every: 10s
+     warn: ($netdata.uptime.uptime > (60) AND $document_locked > (0)) ? ( $document_locked > (($status >= $WARNING ) ? ( $this ) : ( 2 * $this )) ) : ( 0 )
+     info: A high number of requests returning 423 for $label:website.
+       to: silent
+
+ template: iis_uptime
+       on: iis.website_uptime
+    class: Utilization
+     type: Windows
+component: IIS
+       os: *
+    hosts: *
+     calc: ($uptime > 0) ? (1) : (0)
+    units: requests
+    every: 10s
+     warn: $this == 0
+     info: The site $label:website is unavailable.
        to: sysadmin
 
 ### MSSQL
